# neomayor

./: .gitignore  README  main.py  requirements.txt  setup.cfg
divesel_neocities/: api.py  settings.py
neomayor/: api.py  settings.py
src/: main.py
src/neomayor/: settings.py
