[metadata]
name = neomayor
version = 0.0.1
author = shaenr
author_email = divselector@protonmail.com
description = A wrapper of the wrapper of the Neocities API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shaenr/neomayor
project_urls =
    Bug Tracker = https://github.com/shaenr/neomayor/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
